[package]
name = "basics"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "basics"
path = "src/lib.rs"

[dependencies]
dashmap = "6.1"
libc = "0.2"
lz4_flex = { version = "0.11", features = ["frame"] }
openssl = "0.10.76"
parking_lot = "0.12"
rand = "0.8"
regex = "1"
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
tar = "0.4"
time = "0.3"
tracing = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
