[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
build = "build.rs"

[lib]
name = "protocol"
path = "src/lib.rs"

[dependencies]
basics = { path = "../basics" }
bs58 = "0.5"
ed25519-dalek = "2"
getrandom = "0.3"
prost = "0.13"
rfc1751 = "0.1"
ripemd = "0.1"
secp256k1 = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tracing = "0.1"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
