[package]
name = "shamap"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "shamap"
path = "src/lib.rs"

[features]
shadow-hash = []

[dependencies]
parking_lot = "0.12"
basics = { path = "../basics" }
sha2 = { version = "0.10", features = ["asm"] }
time = "0.3"
tracing = "0.1"

[dev-dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protocol = { path = "../protocol" }
