[package]
name = "xrpld-main"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "xrpld"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
parking_lot = "0.12"
app = { path = "../app" }
rpc = { path = "../rpc" }
server = { path = "../server" }
overlay = { path = "../overlay" }
protocol = { path = "../../xrpl/protocol" }
basics = { path = "../../xrpl/basics" }
shamap = { path = "../../xrpl/shamap" }
nodestore = { path = "../nodestore" }
ledger = { path = "../ledger" }
consensus = { path = "../consensus" }
rdb = { path = "../rdb" }
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
console = "0.15"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
xrpld-cli = { path = "../cli" }

[dev-dependencies]
tempfile = "3"
xrpl_core = { path = "../../xrpl/core" }
