[package]
name = "nodestore"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "nodestore"
path = "src/lib.rs"

[dependencies]
xrpld-metrics = { path = "../metrics" }
basics = { path = "../../xrpl/basics" }
protocol = { path = "../../xrpl/protocol" }
librocksdb-sys = "0.16.0"
lz4_flex = "0.11"
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
sha2 = "0.10"
tracing = "0.1"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
