[package]
name = "nodestore"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "nodestore"
path = "src/lib.rs"

[dependencies]
xrpld-metrics = { path = "../metrics" }
basics = { path = "../../xrpl/basics" }
protocol = { path = "../../xrpl/protocol" }
librocksdb-sys = "0.16.0"
lz4_flex = "0.11"
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
sha2 = { version = "0.10", features = ["asm"] }
tracing = "0.1"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
rayon = "1.12.0"
arc-swap = "1.9.1"
dashmap = "6.2.1"

[features]
gpu-hash = []

mmap-store = []

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"


[dependencies.memmap2]
version = "0.9"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
