[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
xrpld-metrics = { path = "../metrics" }
app = { path = "../app" }
axum = { version = "0.8", features = ["json", "ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
basics = { path = "../../xrpl/basics" }
base64 = "0.22"
bytes = "1.11.1"
futures = "0.3"
http = "1"
http-body = "1.0.1"
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
ipnet = "2"
protocol = { path = "../../xrpl/protocol" }
rpc = { path = "../rpc" }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.3.17"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7.18", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
dashmap = "6.2.1"

[dev-dependencies]
ledger = { path = "../ledger" }
serde_json = "1"
tx = { path = "../tx" }
